<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearAndroidLarge"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">

        <LinearLayout
            android:id="@+id/linearColumnhouzziiapps"
            style="@style/groupStyleblue_800"
            android:layout_width="411dp"
            android:layout_height="103dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtHOUZZIIAPPS"
                style="@style/txtInterbold35"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@{androidLargeSevenVM.androidLargeSevenModel.txtHOUZZIIAPPS}"
                android:textSize="30sp"
                tools:text="@string/lbl_houzzii_apps" />
        </LinearLayout>

        <FrameLayout android:id="@+id/frameStackpassword"
            android:layout_gravity="center_horizontal"
            android:layout_height="335dp"
            android:layout_marginEnd="9dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="64dp" android:layout_width="341px">
            <LinearLayout android:id="@+id/linearColumnpassword"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">

                <TextView
                    android:id="@+id/txtPassword"
                    style="@style/txtInterregular23"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="34dp"
                    android:layout_marginBottom="14dp"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:singleLine="true"
                    android:text="@{androidLargeSevenVM.androidLargeSevenModel.txtPassword}"
                    tools:text="@string/lbl_password" />
            </LinearLayout>
            <LinearLayout android:id="@+id/linearColumnemail"
                android:layout_gravity="bottom|center"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius">
                <TextView android:ellipsize="end"
                    android:gravity="start" android:id="@+id/txtEmail"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="14dp"
                    android:layout_marginEnd="34dp"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{androidLargeSevenVM.androidLargeSevenModel.txtEmail}"
                    style="@style/txtInterregular23" tools:text="@string/lbl_email"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageBlueMinimalist"
                imageRes="@{@drawable/img_blueminimalist}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|start"
                android:layout_marginBottom="10dp"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription"
                tools:src="@drawable/img_blueminimalist" />
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtTidakMemiliki"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:singleLine="true"
            style="@style/txtInterregular16" tools:text="@string/msg_tidak_memiliki"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            style="@style/btnSolidRoundedOutline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingTop="13dp"
            android:paddingEnd="30dp"
            android:paddingBottom="13dp"
            android:singleLine="true"
            android:text="@string/lbl_login"
            android:textAllCaps="false"
            tools:text="@string/lbl_login" />

    </LinearLayout>
</layout>
